--- a/postgres-deployment.yaml
+++ b/postgres-deployment.yaml
@@ -23,7 +23,13 @@ spec:
       containers:
         - image: postgres:11
           name: postgres
-          resources: {}
+          resources:
+            limits:
+              cpu: "4"
+              memory: 4Gi
+            requests:
+              cpu: "1"
+              memory: 2Gi
           ports:
             - containerPort: 5432
           volumeMounts:
