Fix Postgres container not initializing n8n dedicated, non-root user + remove unused n8n-config.yaml file

--- a/postgres-deployment.yaml
+++ b/postgres-deployment.yaml
@@ -35,6 +35,9 @@ spec:
           volumeMounts:
             - name: postgresql-pv
               mountPath: /var/lib/postgresql/data
+            - name: init-data
+              mountPath: /docker-entrypoint-initdb.d/init-n8n-user.sh
+              subPath: init-data.sh
           env:
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata      
