--- a/postgres.yaml
+++ b/postgres.yaml
@@ -15,7 +15,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   namespace: n8n
-  name: postgres
+  name: postgres-secret
 type: Opaque
 stringData:
   POSTGRES_USER: changeUser
@@ -47,8 +47,6 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    service: postgres
   name: postgres
   namespace: n8n
 spec:
@@ -132,8 +130,6 @@ kind: Service
 metadata:
   name: postgres
   namespace: n8n
-  labels:
-    service: postgres
 spec:
   clusterIP: None
   ports:
