--- a/n8n-deployment.yaml
+++ b/n8n-deployment.yaml
@@ -17,6 +17,13 @@ spec:
       labels:
         service: n8n
     spec:
+      initContainers:
+        - name: volume-permissions
+          image: busybox:1.36
+          command: ["sh", "-c", "chown 1000:1000 /data"]
+          volumeMounts:
+            - name: n8n-claim0
+              mountPath: /data
       containers:
         - command:
             - /bin/sh
