--- a/n8n-deployment.yaml
+++ b/n8n-deployment.yaml
@@ -17,6 +17,13 @@ spec:
       labels:
         service: n8n
     spec:
+      initContainers:
+        - name: volume-permissions
+          image: busybox:1.36
+          command: ["sh", "-c", "chown 1000:1000 /data"]
+          volumeMounts:
+            - name: n8n-claim0
+              mountPath: /data
       containers:
         - command:
             - /bin/sh
@@ -41,7 +48,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: postgres-secret
-                  key: POSTGRES_NON_ROOT_PASSWORD 
+                  key: POSTGRES_NON_ROOT_PASSWORD
             - name: N8N_PROTOCOL
               value: http
             - name: N8N_PORT
