--- a/postgres-claim0-persistentvolumeclaim.yaml
+++ b/postgres-claim0-persistentvolumeclaim.yaml
@@ -4,6 +4,7 @@ metadata:
   name: postgresql-pv
   namespace: n8n
 spec:
+  storageClassName: regionalpd-storageclass
   accessModes:
     - ReadWriteOnce
   resources:
